--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
     
      <div>profiter de nos promos!!</div>  
   </div>
-  <div class="col-4 " >
-    <div >
-      <img style="border-radius: 20px;" width="100%" src="service/desktop-20220804-1.jpg" alt="">
+  <div class="col-md-4 col-12 " >
+    <div  style="padding: 25px 0;">
+      <img style="border-radius: 20px;" width="100%" src="image15.png" alt="">
     </div>
   </div>
-  <div class="col-4">
-    <div >
-      <img style="border-radius: 20px;" width="100%" src="service/rtx30-landing-bg-sm.jpg" alt="">
+  <div class="col-md-4 col-12">
+    <div style="padding: 25px 0;" >
+      <img style="border-radius: 20px;" width="100%" src="image15.png" alt="">
     </div>
     
   </div>
 
-  <div class="col-4 ">
-    <div >
-      <img style="border-radius: 20px;" width="100%" src="service/Screenshot_1.png" alt="">
+  <div class=" col-md-4 col-12 ">
+    <div style="padding: 25px 0;" >
+      <img style="border-radius: 20px;" width="100%" src="image15.png" alt="">
     </div>
   </div>
 
